# customer-facing-bot

./: .env.example  .gitignore  README.md  mcp-config.example.json  pyproject.toml  requirements.txt
.rag_db/: chroma.sqlite3  knowledge_manifest.json
docs/: support-read-spec.md
knowledge/: generate_kb.py
knowledge/chunks/business-rules/: account-based-no-device.md  amendment-reprice-24h.md  amendment-start-date-window.md  contract-assignable-statuses.md  coterm-minimum-days.md  customer-request-expiry-7-days.md  discount-range.md  email-domain-match.md  max-sku-quantity-999.md  no-concurrent-approval.md  optin-for-product-users.md  organization-required.md  owner-admin-no-assignment.md  quote-validity-30-days.md  renewal-amendment-blackout.md  renewal-date-ranges.md  shipto-address-required.md  subscription-revocation-rules.md  superkey-limit-5.md  trial-no-amend-renew.md
knowledge/chunks/data-ownership/: addresses.md  approvals.md  audit-logs.md  bulk-operations.md  (+14 more)
operations/reads/: DevicesV2.graphql  GetAccount.graphql  GetContract.graphql  GetDealerCustomer.graphql  GetProducts.graphql  LastContractDefaults.graphql  ListContracts.graphql  ListProductsByAccount.graphql  ListTopDealerDashboardAlerts.graphql  Notifications.graphql  RenewalEligibleContractIds.graphql  SupportBotRead.graphql
operations/sql/: last_contract.sql  renewal_eligible_contracts.sql
operations/writes/: ConvertContract.graphql  CreateDraftContract.graphql
src/dxp_support_mcp/: __init__.py  chat_api.py  chat_ui.py  cli.py  config.py  logging_utils.py  mcp_server.py  paths.py  state.py
(+349 files in other folders)
