[project]
name = "dxp-support-mcp"
version = "0.1.0"
description = "MCP server and support chatbot for DXP GraphQL (contract create/submit)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
]

[project.scripts]
dxp-support-mcp = "dxp_support_mcp.mcp_server:main"
dxp-support-chat = "dxp_support_mcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
