[project]
name = "dxp-support-mcp"
version = "0.1.0"
description = "MCP server and support chatbot for DXP GraphQL (contract create/submit)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "gradio>=5.0.0",
  "chromadb>=0.5.23",
  "sentence-transformers>=3.3.1",
]

[project.scripts]
dxp-support-mcp = "dxp_support_mcp.mcp_server:main"
dxp-support-chat = "dxp_support_mcp.cli:main"
dxp-support-api = "dxp_support_mcp.chat_api:main"
dxp-support-ui = "dxp_support_mcp.chat_ui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
